<!-- Copyright (C) 2020 The Xiaomi-SM6250 Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
   <string name="advanced_settings">SamsungParts</string>
   <string name="advanced_settings_summary">Device specific tweaks</string>
   <string name="not_shown">Not shown due to user settings</string>
   <string name="show_data">Show the battery data</string>
   <!-- Display category -->
   <string name="display_category">Display</string>
   <!-- FPS Info -->
   <string name="fps_info_title">FPS info overlay</string>
   <string name="fps_info_summary">Show overlay with current frames per second</string>
   <!-- Speaker category -->
   <string name="speaker_category">Audio</string>
   <string name="flash_enable_title">Enable Eureka flash control feature</string>
   <!-- Clear Speaker -->
   <string name="clear_speaker_title">Clear speaker</string>
   <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
   <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2–5 times while shaking your device with the speaker facing downwards.</string>
   <!-- Dolby -->
   <string name="dolby_summary">Enable the Dolby Atmos audio effect</string>
   <!-- Title -->
   <string name="dolby_title" translatable="false">Dolby Atmos</string>
   <!-- Switch bar -->
   <string name="dolby_enable_title">Enable Dolby Atmos</string>
   <!-- Intro -->
   <string name="dolby_top_intro_summary">Experience breakthrough audio for media playback that flows above and around you</string>
   <!-- Profiles -->
   <string name="dolby_profile_auto">Auto Profile</string>
   <string name="dolby_profile_game">Game Profile</string>
   <string name="dolby_profile_game_1">Game 1 Profile</string>
   <string name="dolby_profile_game_2">Game 2 Profile</string>
   <string name="dolby_profile_movie">Movie Profile</string>
   <string name="dolby_profile_music">Music Profile</string>
   <string name="dolby_profile_off">No Profile</string>
   <string name="dolby_profile_spacial_audio">Spacial Audio Profile</string>
   <string name="dolby_profile_voice">Voice Profile</string>
   <!-- Eureka Kernel features category -->
   <string name="eureka_kernel_features">Eureka Kernel Features</string>
   <!-- FlashLight -->
   <string name="flashlight_title">FlashLight Brightness</string>
   <string name="flashlight_summary">Adjust FlashLight Brightness</string>
   <string name="flashlight_description">Samsung\'s OneUI Has An Option to Adjust
        Flashlight Brightness. AOSP doesn\'t have this feature.\n\n
        Use this feature to adjust low or high flashlight brightness. Ranges from 0 to 10.</string>
   <string name="swap_title">Swap on userdata</string>
   <string name="swap_enable_title">Enable swap on EMMC</string>
   <string name="swap_size_title">Swap size</string>
   <string name="swap_size_summary">Adjust the size of swap</string>
   <string name="swap_description">Creates the swap (not zram) on /data partiton. Useful for low memory devices.</string>
   <string name="free_space">Free space on /data</string>
   <string name="swap_file_size">Swap file size</string>
   <!-- Display Category -->
   <string name="misc_category">Misc</string>
   <string name="dt2w_mode">Toggle for double tap to wake</string>
   <string name="glove_mode">Toggle for glove mode</string>
   <!-- Battery -->
   <string name="fastcharge_category">Battery</string>
   <string name="fastcharge_2nd_title">FastCharge Settings</string>
   <string name="charge_title">Charging Settings</string>
   <string name="charge_summary">Enable/Disable Charging here.</string>
   <string name="fastcharge_title">Battery Info and Settings</string>
   <string name="fastcharge_summary">Enable/Disable Fastcharge Feature</string>
   <string name="fastcharge_description">Manage Charging Feature here.</string>
   <string name="battery_info_title">Battery Misc Info</string>
   <string name="battery_info_summary">Section for geeks</string>
   <string name="battery_max_capa">Battery Max Capacity (mAh)</string>
   <string name="battery_status">Battery Status</string>
   <string name="battery_chrged_up_to">Battery Charged Up To (%)</string>
   <string name="battery_chrged_up_to_mah">Battery Charged Up To (mAh)</string>
   <string name="battery_temp">Battery Current Temperature</string>
   <string name="battery_current">Battery Current (mA)</string>
   <!-- Label for feature switch -->
   <string name="switch_bar_on">On</string>
   <!-- Label for feature switch -->
   <string name="switch_bar_off">Off</string>
   <!-- SmartCharge -->
   <string name="smartcharge_title">Simple SmartCharge Implementation</string>
   <string name="smartcharge_switch">Enable The Implementation</string>
   <string name="choose_limit_title">Adjust Charge Limit %</string>
   <string name="choose_summary">Tap here to adjust the settings</string>
   <string name="choose_restart_title">Adjust Charge Restart %</string>
   <string name="limit_title">Current Limit Charge % Setting</string>
   <string name="restart_title">Current Restart Charge % Setting</string>
   <string name="limit_stat_title">Stats of limited charging count since last boot</string>
   <string name="restart_stat_title">Stats of restarted charging count since last boot</string>
   <string name="apply">Apply current settings</string>
   <string name="adjust_title">Move the seekbar to adjust values</string>
   <string name="adjust_summary">From the most left, the value will move by -10 -1 0 1 10</string>
   <string name="smartcharge_description">This is a simple smartcharge implementation based on
	   battery percentage. If the battery percent is above limit, the charging stops, or if it is 
	   below restart, it charges again. Said to improve battery life in long term</string>
</resources>
