<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/fastcharge_title">

	<com.android.settingslib.widget.MainSwitchPreference
		android:key="show_data" 
		android:title="@string/show_data"/>

	<SwitchPreference 
		android:key="fastcharge_pref"
		android:title="@string/fastcharge_2nd_title"
		android:icon="@drawable/ic_bolt"
		android:summary="@string/fastcharge_summary"/>

	<SwitchPreference 
		android:key="charge_pref"
		android:title="@string/charge_title"
		android:icon="@drawable/ic_bolt"
		android:summary="@string/charge_summary"/>

	<Preference 
		android:key="battery_capacity" 
		android:title="@string/battery_max_capa" 
		android:summary="@string/not_shown" 
		android:selectable="false"/>

	<Preference 
		android:key="battery_charged_up_to" 
		android:title="@string/battery_chrged_up_to" 
		android:summary="@string/not_shown" 
		android:selectable="false"/>

	<Preference 
		android:key="battery_charged_up_to_mah"
		android:title="@string/battery_chrged_up_to_mah"
		android:summary="@string/not_shown"
		android:selectable="false"/>

	<Preference 
		android:key="battery_current" 
		android:title="@string/battery_current" 
		android:summary="@string/not_shown" 
		android:selectable="false"/>

	<Preference 
		android:key="battery_status" 
		android:title="@string/battery_status" 
		android:summary="@string/not_shown" 
		android:selectable="false"/>

	<Preference
		android:key="battery_temp"
		android:title="@string/battery_temp"
		android:summary="@string/not_shown"
		android:selectable="false"/>

	<com.android.settingslib.widget.FooterPreference
		android:key="footer_preference"
		android:title="@string/fastcharge_description"
		android:selectable="false"/>

</PreferenceScreen>
