<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
	android:title="@string/smartcharge_title">

   <com.android.settingslib.widget.MainSwitchPreference
	   android:defaultValue="false" 
	   android:key="smartcharge" 
	   android:title="@string/smartcharge_switch"/>

   <com.android.settingslib.widget.SelectorWithWidgetPreference
	   android:key="choose_limit"
	   android:title="@string/choose_limit_title"
	   android:summary="@string/choose_summary"/>

   <com.android.settingslib.widget.SelectorWithWidgetPreference
	   android:key="choose_restart"
	   android:title="@string/choose_restart_title"
	   android:summary="@string/choose_summary"/>

   <SeekBarPreference
	   android:key="adjust"
	   android:title="@string/adjust_title"
	   android:summary="@string/adjust_summary"/>

   <Preference 
	   android:key="limit" 
	   android:title="@string/limit_title" 
	   android:icon="@drawable/ic_battery" 
	   android:selectable="false"/>

   <Preference 
	   android:key="restart"
	   android:title="@string/restart_title"
	   android:icon="@drawable/ic_battery"
	   android:selectable="false"/>

   <Preference 
	   android:key="limit_stat"
	   android:title="@string/limit_stat_title"
	   android:icon="@drawable/ic_charge"
	   android:selectable="false"/>

   <Preference 
	   android:key="restart_stat"
	   android:title="@string/restart_stat_title"
	   android:icon="@drawable/ic_charge"
	   android:selectable="false"/>

   <com.android.settingslib.widget.FooterPreference
	   android:title="@string/smartcharge_description"
	   android:selectable="false"/>
</PreferenceScreen>
