<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/swap_title">
	<com.android.settingslib.widget.MainSwitchPreference
		android:defaultValue="false"
		android:key="swap_enable"
		android:title="@string/swap_enable_title"/>

	<SeekBarPreference 
		android:key="swap_size"
		android:title="@string/swap_size_title"
		android:icon="@drawable/ic_memory"
		android:summary="@string/swap_size_summary"/>
	<Preference
		android:key="free_space"
		android:title="@string/free_space"
		android:selectable="false"/>

	<Preference 
		android:key="swap_file_size"
		android:title="@string/swap_file_size"
		android:selectable="false"/>

	<com.android.settingslib.widget.FooterPreference
		android:title="@string/swap_description"
		android:selectable="false"/>
</PreferenceScreen>
