<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="display"
        android:title="@string/display_category">
        <SwitchPreference
            android:key="fps_info"
            android:icon="@drawable/ic_fps_info"
            android:title="@string/fps_info_title"
            android:summary="@string/fps_info_summary"
            android:persistent="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="speaker"
        android:title="@string/speaker_category">
        <Preference
            android:key="clear_speaker_settings"
            android:title="@string/clear_speaker_title"
            android:summary="@string/clear_speaker_summary"
            android:icon="@drawable/ic_sound" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.eurekateam.samsungextras.speaker.ClearSpeakerActivity"
                android:targetPackage="com.eurekateam.samsungextras" />
        </Preference>
        <Preference
            android:key="dolby_settings"
            android:title="@string/dolby_title"
            android:summary="@string/dolby_summary"
            android:icon="@drawable/ic_speaker_cleaner_icon" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.eurekateam.samsungextras.dolby.DolbyActivity"
                android:targetPackage="com.eurekateam.samsungextras" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="eureka_kernel_features"
        android:title="@string/eureka_kernel_features">
        <Preference
            android:key="flashlight_settings"
            android:title="@string/flashlight_title"
            android:summary="@string/flashlight_summary"
            android:icon="@drawable/ic_led" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.eurekateam.samsungextras.flashlight.FlashLightActivity"
                android:targetPackage="com.eurekateam.samsungextras" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="misc"
        android:title="@string/misc_category">
        <SwitchPreference
            android:key="gpuexynos_settings"
            android:title="@string/gpuexynos_title"
            android:icon="@drawable/ic_gpu"
            android:summary="@string/gpuexynos_summary"
            android:persistent="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="fastcharge"
        android:title="@string/fastcharge_category">
        <Preference
            android:key="battery_settings"
            android:title="@string/fastcharge_title"
            android:icon="@drawable/ic_bolt"
            android:summary="@string/fastcharge_summary"
            android:persistent="true">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.eurekateam.samsungextras.battery.BatteryActivity"
            android:targetPackage="com.eurekateam.samsungextras" />
        </Preference>

    </PreferenceCategory>
    <PreferenceCategory
        android:key="info"
        android:title="@string/info_category">
        <Preference
            android:key="selinux_settings"
            android:title="@string/selinux_title"
            android:icon="@drawable/ic_qs_log"
            android:summary="@string/selinux_summary"
            android:persistent="true"/>
    </PreferenceCategory>
</PreferenceScreen>
